# sprout

./: Cargo.toml  LICENSE  README.md
src/: compare.rs  fragment.rs  fragment_macros.rs  fragments.rs  grammar.rs  lib.rs  prelude.rs  token_match.rs  tokenize.rs
src/compare/: match_graph.rs  match_graph_builder.rs  mod.rs  sequence_view.rs
src/grammar/: builder.rs  macros.rs  mod.rs  template.rs
src/parse/: build_grammar.rs  grammar.rs  macros.rs  mod.rs  template.rs
tests/: integration_tests.rs
