[package]
name = "sprout"
description = "A rust crate for growing simple, but beautiful AST trees 🌳"
homepage = "https://github.com/nicholas-roether/sprout"
repository = "https://github.com/nicholas-roether/sprout"
readme = "README.md"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
trees = "0.4.2"
