[package]
name = "sprout"
description = "A rust crate for growing simple, but beautiful AST trees 🌳"
homepage = "https://github.com/nicholas-roether/sprout"
repository = "https://github.com/nicholas-roether/sprout"
readme = "README.md"
version = "1.0.0"
keywords = ["parse", "ast", "language", "grammar", "tokens"]
categories = ["parsing"]
edition = "2021"
license = "MIT"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
petgraph = "0.6.2"
trees = "0.4.2"
